# BeaudyShell

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  install_Linux.sh  install_macOs.sh
.github/workflows/: build.yml
docs/: PROJECT_STRUCTURE.md  SHELL_FLOW.md
include/: beaudyShell.h  builtins.h  config.h  execute.h  input.h  jobs.h  pipes.h  prompt.h  signals.h  utils.h
src/: builtins.c  execute.c  input.c  job_builtins.c  jobs.c  main.c  pipes.c  prompt.c  shell.c  signals.c  utils.c
